webhooks/service-user-access/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auditor-wh-deployment
  namespace: gitlab-webhook
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: auditor-wh
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: auditor-wh
        team: cloud
    spec:
      containers:
      - env:
        - name: SECRET_TOKEN
          valueFrom:
            secretKeyRef:
              key: SECRET_TOKEN
              name: auditor-wh-secret
        - name: GITLAB_TOKEN
          valueFrom:
            secretKeyRef:
              key: GITLAB_TOKEN
              name: auditor-wh-secret
        - name: GITLAB_URL
          valueFrom:
            secretKeyRef:
              key: GITLAB_URL
              name: auditor-wh-secret
        image: imagepath.domain.doc/registry:audwhv0.0.5
        imagePullPolicy: IfNotPresent
        name: auditor-wh-container
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
